minor fixes: education:text-align:justify and capitalize months

--- a/style/education.css
+++ b/style/education.css
@@ -1,5 +1,6 @@
 
 .education{
+    text-align: justify;
     background-color: var(--dark-blue);
     color: white
 }
